modified on main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Jakubek jest najsuper</h1>
+        <h1>Jakubek jest najsuper.com</h1>
     </body>
 </html>
